--- a/progress.tex
+++ b/progress.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 %\documentclass[leqno,onefignum,onetabnum]{siamltex1213}
-\newcommand{\ourtitle}{CS 8803DL: Deep Learning Project Proposal}
+\newcommand{\ourtitle}{CS 8803DL: Deep Learning Project\\Mid-Term Progress Report}
 \newcommand{\ourinstitution}{Georgia Institute of Technology}
 \newcommand{\ourauthors}{}
 
@@ -55,8 +55,8 @@
 \maketitle
 %\tableofcontents
 %=================================BODY==================================
-\section{Proposal}                  \label{sec:proposal}
-                                    \input{0-00-proposal.tex}
+\section{Progress Report}                  \label{sec:progress}
+                                           \input{1-00-progress.tex}
 %=======================================================================
 \bibliographystyle{acm} \bibliography{bib}
 %\input{appendix}
