added papers to bibliography

--- a/0-00-proposal.tex
+++ b/0-00-proposal.tex
@@ -1,1 +1,5 @@
+Long-term recurrent convolutional networks:~\cite{ltrcn}
+Large-scale video classification:~\cite{cnnvid}
+Learning Spatio-temporal features:~\cite{stf}
+
 Insert proposal here. Example cite:~\cite{dlbook}
