--- a/bib.bib
+++ b/bib.bib
@@ -1,3 +1,55 @@
+@inproceedings{cnnvid,
+ author = {Karpathy, Andrej and Toderici, George and Shetty, Sanketh and Leung, Thomas and Sukthankar, Rahul and Fei-Fei, Li},
+ title = {Large-Scale Video Classification with Convolutional Neural Networks},
+ booktitle = {Proceedings of the 2014 IEEE Conference on Computer Vision and Pattern Recognition},
+ series = {CVPR '14},
+ year = {2014},
+ isbn = {978-1-4799-5118-5},
+ pages = {1725--1732},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1109/CVPR.2014.223},
+ doi = {10.1109/CVPR.2014.223},
+ acmid = {2680211},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {convolutional, neural, network, video, classification, action, recognition, large-scale, dataset, sports},
+} 
+
+@article{stf,
+  author    = {Du Tran and
+               Lubomir D. Bourdev and
+               Rob Fergus and
+               Lorenzo Torresani and
+               Manohar Paluri},
+  title     = {Learning Spatiotemporal Features with 3D Convolutional Networks},
+  journal   = {CoRR},
+  volume    = {abs/1412.0767},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1412.0767},
+  timestamp = {Thu, 01 Jan 2015 19:51:08 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/TranBFTP14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{ltrcn,
+  author    = {Jeff Donahue and
+               Lisa Anne Hendricks and
+               Sergio Guadarrama and
+               Marcus Rohrbach and
+               Subhashini Venugopalan and
+               Kate Saenko and
+               Trevor Darrell},
+  title     = {Long-term Recurrent Convolutional Networks for Visual Recognition
+               and Description},
+  journal   = {CoRR},
+  volume    = {abs/1411.4389},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1411.4389},
+  timestamp = {Mon, 01 Dec 2014 14:32:13 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/DonahueHGRVSD14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 @unpublished{dlbook,
     title={Deep Learning},
     author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
