more detailed structure

--- a/0-00-proposal.tex
+++ b/0-00-proposal.tex
@@ -1,5 +1,29 @@
-Long-term recurrent convolutional networks:~\cite{ltrcn}
-Large-scale video classification:~\cite{cnnvid}
-Learning Spatio-temporal features:~\cite{stf}
+\subsection{Motivation}
+%What problem are you trying to solve? Why is this hard right now?
 
-Insert proposal here. Example cite:~\cite{dlbook}
+\subsection{Related Work}
+%What has been done in similar fields/problems? What are the limitations of current approaches?
+
+%Recurrent long-term convolutional models are most frequently used in speech and language applications, but it is possible to apply them to visual time-series data. 
+
+
+Long-term recurrent convolutional networks:~\cite{ltrcn}
+
+Large-scale video classification:~\cite{cnnvid}
+
+Learning Spatio-temporal features:~\cite{stf}
+\subsection{Approach and Techniques}
+%What is your proposed approach to solving the problem? How does it compare to existing approaches?
+%Note: It's OK for these projects to be similar to existing approaches, although if you want to publish the results they will have to have some novelty.
+
+\subsection{Data Set}
+%What data are you planning to apply your approach to?
+
+\TODO{Describe the video data set...}
+\subsection{Experimental Methodology}
+%What specific experiments are you planning on conducting? How are they testing the specific problem you want to solve?
+
+For training we plan to use the Jinx cluster at Georgia Tech. Each node is equipped with 2 nVidia Tesla M2090 ``Fermi'' GPU cards.
+\subsection{Group Tasking}
+%A plan of breaking up the project (who will do what). Note that all team members must make a meaningful/significant contribution (i.e. not just do the reporting/posters).
+
