--- a/proposal.tex
+++ b/proposal.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[10pt]{article}
 %\documentclass[leqno,onefignum,onetabnum]{siamltex1213}
 \newcommand{\ourtitle}{CS 8803DL: Deep Learning Project Proposal}
 \newcommand{\ourinstitution}{Georgia Institute of Technology}
@@ -16,12 +16,12 @@
 \usepackage{vuduc-typography}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
-\usepackage{multirow}
-\usepackage{lscape}
+%\usepackage{multirow}
+%\usepackage{lscape}
 \usepackage{amsmath}
 \usepackage{amsfonts}
-\usepackage{morefloats}
-\usepackage{paralist}
+%\usepackage{morefloats}
+%\usepackage{paralist}
 \usepackage{sidenotes}
 \usepackage{tablefootnote}
 
