--- a/bib.bib
+++ b/bib.bib
@@ -1,3 +1,20 @@
+@article{snip,
+  author    = {Joe Yue{-}Hei Ng and
+               Matthew J. Hausknecht and
+               Sudheendra Vijayanarasimhan and
+               Oriol Vinyals and
+               Rajat Monga and
+               George Toderici},
+  title     = {Beyond Short Snippets: Deep Networks for Video Classification},
+  journal   = {CoRR},
+  volume    = {abs/1503.08909},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1503.08909},
+  timestamp = {Thu, 09 Apr 2015 11:33:20 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/NgHVVMT15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 @inproceedings{cnnvid,
  author = {Karpathy, Andrej and Toderici, George and Shetty, Sanketh and Leung, Thomas and Sukthankar, Rahul and Fei-Fei, Li},
  title = {Large-Scale Video Classification with Convolutional Neural Networks},
