--- a/0-00-proposal.tex
+++ b/0-00-proposal.tex
@@ -17,11 +17,34 @@ Beyond short snippets:~\cite{snip}
 \subsection*{Approach and Techniques}
 %What is your proposed approach to solving the problem? How does it compare to existing approaches?
 %Note: It's OK for these projects to be similar to existing approaches, although if you want to publish the results they will have to have some novelty.
-We have decided on two possible approaches, which address the third dimension (time) in different ways: 3D Convolutional Neural Networks (3D-CNNs) and Long Short-Term Memory (LSTM) Recurrent Neural Networks (RNNs). 
 
-Using a 3D CNN it is possible to build a classifier on a moving window of frames. This network performs a 3D convolution kernel along a window of frames, thereby incorporating movement as a signal.
+We have decided on combining two possible approaches, which address
+the third dimension (time) in different ways: 3D Convolutional Neural
+Networks (3D-CNNs) \cite{stf,cnnvid} and Multi-Dimensional Long
+Short-Term Memory (LSTM) Recurrent Neural Networks (RNNs) \cite{ltrcn}. 
 
-The `Long Short-Term Memory' (LSTM) technique \TODO{\dots}.
+% 3D-CNNs
+Using a 3D-CNNs, it is possible to build a classifier on a moving window
+of frames, which extract useful local movement information shared
+in a few frame. We would like to use the slow fusion model \cite{cnnvid}
+due to the GPU memory constrain. On the other hand, LSTM/ RNNs is
+able to build the classifier with long term memory
+using much larger number of the frames in the video. 
+Combining both 3D-CNNs and LSTM is able to combine the
+local movement information with long-term memory,
+which can further increase the classification accuracy.
+
+% LSTM
+Furthermore, the current LSTM model is built on the fully-connected
+layer, which no spatial information is preserved. We would like to
+try to plug-in the LSTM at earlier layers to test its performance.
+Especially, if applying LSTM directly after the convolution layer,
+the input to LSTM model is actually multi-dimentional tensor. To address
+this challenge, we would like to apply the multi-dimensional LSTM
+\cite{byeon2015scene} to efficiently take advantage of the spatial
+information after the convolution layer. 
+
+
 \subsection*{Data Set}
 %What data are you planning to apply your approach to?
 \TODO{Describe the video data set...}
