--- a/bib.bib
+++ b/bib.bib
@@ -1,76 +1,80 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+
+%% Created for Hao Yan at 2016-02-18 21:19:44 -0500 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@inproceedings{byeon2015scene,
+	Author = {Byeon, Wonmin and Breuel, Thomas M and Raue, Federico and Liwicki, Marcus},
+	Booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+	Date-Added = {2016-02-19 02:19:43 +0000},
+	Date-Modified = {2016-02-19 02:19:43 +0000},
+	Pages = {3547--3555},
+	Title = {Scene labeling with lstm recurrent neural networks},
+	Year = {2015}}
+
 @article{snip,
-  author    = {Joe Yue{-}Hei Ng and
-               Matthew J. Hausknecht and
-               Sudheendra Vijayanarasimhan and
-               Oriol Vinyals and
-               Rajat Monga and
-               George Toderici},
-  title     = {Beyond Short Snippets: Deep Networks for Video Classification},
-  journal   = {CoRR},
-  volume    = {abs/1503.08909},
-  year      = {2015},
-  url       = {http://arxiv.org/abs/1503.08909},
-  timestamp = {Thu, 09 Apr 2015 11:33:20 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/NgHVVMT15},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
-}
+	Author = {Joe Yue{-}Hei Ng and Matthew J. Hausknecht and Sudheendra Vijayanarasimhan and Oriol Vinyals and Rajat Monga and George Toderici},
+	Bibsource = {dblp computer science bibliography, http://dblp.org},
+	Biburl = {http://dblp.uni-trier.de/rec/bib/journals/corr/NgHVVMT15},
+	Journal = {CoRR},
+	Timestamp = {Thu, 09 Apr 2015 11:33:20 +0200},
+	Title = {Beyond Short Snippets: Deep Networks for Video Classification},
+	Url = {http://arxiv.org/abs/1503.08909},
+	Volume = {abs/1503.08909},
+	Year = {2015},
+	Bdsk-Url-1 = {http://arxiv.org/abs/1503.08909}}
 
 @inproceedings{cnnvid,
- author = {Karpathy, Andrej and Toderici, George and Shetty, Sanketh and Leung, Thomas and Sukthankar, Rahul and Fei-Fei, Li},
- title = {Large-Scale Video Classification with Convolutional Neural Networks},
- booktitle = {Proceedings of the 2014 IEEE Conference on Computer Vision and Pattern Recognition},
- series = {CVPR '14},
- year = {2014},
- isbn = {978-1-4799-5118-5},
- pages = {1725--1732},
- numpages = {8},
- url = {http://dx.doi.org/10.1109/CVPR.2014.223},
- doi = {10.1109/CVPR.2014.223},
- acmid = {2680211},
- publisher = {IEEE Computer Society},
- address = {Washington, DC, USA},
- keywords = {convolutional, neural, network, video, classification, action, recognition, large-scale, dataset, sports},
-} 
+	Acmid = {2680211},
+	Address = {Washington, DC, USA},
+	Author = {Karpathy, Andrej and Toderici, George and Shetty, Sanketh and Leung, Thomas and Sukthankar, Rahul and Fei-Fei, Li},
+	Booktitle = {Proceedings of the 2014 IEEE Conference on Computer Vision and Pattern Recognition},
+	Doi = {10.1109/CVPR.2014.223},
+	Isbn = {978-1-4799-5118-5},
+	Keywords = {convolutional, neural, network, video, classification, action, recognition, large-scale, dataset, sports},
+	Numpages = {8},
+	Pages = {1725--1732},
+	Publisher = {IEEE Computer Society},
+	Series = {CVPR '14},
+	Title = {Large-Scale Video Classification with Convolutional Neural Networks},
+	Url = {http://dx.doi.org/10.1109/CVPR.2014.223},
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/CVPR.2014.223}}
 
 @article{stf,
-  author    = {Du Tran and
-               Lubomir D. Bourdev and
-               Rob Fergus and
-               Lorenzo Torresani and
-               Manohar Paluri},
-  title     = {Learning Spatiotemporal Features with 3D Convolutional Networks},
-  journal   = {CoRR},
-  volume    = {abs/1412.0767},
-  year      = {2014},
-  url       = {http://arxiv.org/abs/1412.0767},
-  timestamp = {Thu, 01 Jan 2015 19:51:08 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/TranBFTP14},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
-}
+	Author = {Du Tran and Lubomir D. Bourdev and Rob Fergus and Lorenzo Torresani and Manohar Paluri},
+	Bibsource = {dblp computer science bibliography, http://dblp.org},
+	Biburl = {http://dblp.uni-trier.de/rec/bib/journals/corr/TranBFTP14},
+	Journal = {CoRR},
+	Timestamp = {Thu, 01 Jan 2015 19:51:08 +0100},
+	Title = {Learning Spatiotemporal Features with 3D Convolutional Networks},
+	Url = {http://arxiv.org/abs/1412.0767},
+	Volume = {abs/1412.0767},
+	Year = {2014},
+	Bdsk-Url-1 = {http://arxiv.org/abs/1412.0767}}
 
 @article{ltrcn,
-  author    = {Jeff Donahue and
-               Lisa Anne Hendricks and
-               Sergio Guadarrama and
-               Marcus Rohrbach and
-               Subhashini Venugopalan and
-               Kate Saenko and
-               Trevor Darrell},
-  title     = {Long-term Recurrent Convolutional Networks for Visual Recognition
-               and Description},
-  journal   = {CoRR},
-  volume    = {abs/1411.4389},
-  year      = {2014},
-  url       = {http://arxiv.org/abs/1411.4389},
-  timestamp = {Mon, 01 Dec 2014 14:32:13 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/DonahueHGRVSD14},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
-}
+	Author = {Jeff Donahue and Lisa Anne Hendricks and Sergio Guadarrama and Marcus Rohrbach and Subhashini Venugopalan and Kate Saenko and Trevor Darrell},
+	Bibsource = {dblp computer science bibliography, http://dblp.org},
+	Biburl = {http://dblp.uni-trier.de/rec/bib/journals/corr/DonahueHGRVSD14},
+	Journal = {CoRR},
+	Timestamp = {Mon, 01 Dec 2014 14:32:13 +0100},
+	Title = {Long-term Recurrent Convolutional Networks for Visual Recognition and Description},
+	Url = {http://arxiv.org/abs/1411.4389},
+	Volume = {abs/1411.4389},
+	Year = {2014},
+	Bdsk-Url-1 = {http://arxiv.org/abs/1411.4389}}
 
 @unpublished{dlbook,
-    title={Deep Learning},
-    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
-    note={Book in preparation for MIT Press},
-    url={http://goodfeli.github.io/dlbook/},
-    year={2016}
-}
+	Author = {Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+	Note = {Book in preparation for MIT Press},
+	Title = {Deep Learning},
+	Url = {http://goodfeli.github.io/dlbook/},
+	Year = {2016},
+	Bdsk-Url-1 = {http://goodfeli.github.io/dlbook/}}
