formatting and intro change

--- a/bib.bib
+++ b/bib.bib
@@ -6,7 +6,16 @@
 
 
 %% Saved with string encoding Unicode (UTF-8) 
-
+@article{brox,
+  author       = "T. Brox and J. Malik",
+  title        = "Large displacement optical flow: descriptor matching in variational motion estimation",
+  journal      = "IEEE Transactions on Pattern Analysis and Machine Intelligence",
+  number       = "3",
+  volume       = "33",
+  pages        = "500-513",
+  year         = "2011",
+  url          = "http://lmb.informatik.uni-freiburg.de//Publications/2011/Bro11a"
+}
 
 
 @inproceedings{byeon2015scene,
