--- a/proposal.tex
+++ b/proposal.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt]{article}
+\documentclass[11pt]{article}
 %\documentclass[leqno,onefignum,onetabnum]{siamltex1213}
 \newcommand{\ourtitle}{CS 8803DL: Deep Learning Project Proposal}
 \newcommand{\ourinstitution}{Georgia Institute of Technology}
@@ -24,7 +24,7 @@
 %\usepackage{paralist}
 \usepackage{sidenotes}
 \usepackage{tablefootnote}
-
+\usepackage[letterpaper, margin=1.4in]{geometry}
 \setcounter{page}{1}
 \pagenumbering{arabic}
 
@@ -48,7 +48,9 @@
 \author{Min-Hung Chen\thanks{cmhungsteve@gatech.edu}}
 \author{Chih-Yao Ma\thanks{cyma@gatech.edu}}
 \author{Hao Yan\thanks{yanhao@gatech.edu}}
-\affil{Georgia Institute of Technology}
+\affil{}
+%\affil{Georgia Institute of Technology}
+\date{}
 \begin{document}
 %\begin{abstract}
 %\end{abstract}
@@ -58,7 +60,7 @@
 \section{Proposal}                  \label{sec:proposal}
                                     \input{0-00-proposal.tex}
 %=======================================================================
-\bibliographystyle{acm} \bibliography{bib}
+\bibliographystyle{abbrv} \bibliography{bib}
 %\input{appendix}
 \end{document}
 %eof
