--- a/proposal.tex
+++ b/proposal.tex
@@ -24,7 +24,7 @@
 %\usepackage{paralist}
 \usepackage{sidenotes}
 \usepackage{tablefootnote}
-\usepackage[letterpaper, margin=1.4in]{geometry}
+\usepackage[letterpaper, margin=1.2in]{geometry}
 \setcounter{page}{1}
 \pagenumbering{arabic}
 
@@ -43,7 +43,7 @@
 \newcommand{\Rfour}[4]{\ensuremath{\R^{{#1}\times{#2}\times{#3}\times{#4}}}\xspace} % 4-D: R^{a x b x c x d}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{\ourtitle}
+\title{\vspace{-1.4cm}\ourtitle}
 \author{Casey Battaglino\thanks{cbattaglino3@gatech.edu}}
 \author{Min-Hung Chen\thanks{cmhungsteve@gatech.edu}}
 \author{Chih-Yao Ma\thanks{cyma@gatech.edu}}
