--- a/0-00-proposal.tex
+++ b/0-00-proposal.tex
@@ -61,6 +61,7 @@ The following is a set of experiments that we may perform, given enough time:
 \item Replace a 2D-CNN-LSTM network with a Shallow ResNet-LSTM network (with or without slow fusion)-- to see if ResNet provides significant gains over the AlexNet used by existing studies.
 \item Study if slow-fusion \emph{combined} with optical-flow input provides significantly better results than either approach on its own.
 \end{itemize}
+We may experiment with different strategies in normalization and augmentation, given enough time.
 \subsection*{Group Tasking}
 %A plan of breaking up the project (who will do what). Note that all team members must make a meaningful/significant contribution (i.e. not just do the reporting/posters).
 The following is a tentative list of tasks. As we move closer to our experiments the list will undoubtedly grow. 
@@ -68,10 +69,8 @@ The following is a tentative list of tasks. As we move closer to our experiments
 \item Proposal writing - Steve, Hao, Casey
 \item Proposal presentation - Yao
 \item Read and understand papers on 2D-LSTM - Everyone
-\item Read and understand ResNet papers - Everyone
 %\item Read and understand caffe code that implements 2D-CNN and LSTM.
 \item Implement LSTM: Yao, Casey
 \item Implement CNN: Steve, Hao
 \item Preparation of UCF data (incl. optical flow) - Casey
-\item Preparation of Sports-101 data - (? \dots tentative)
 \end{itemize}
