--- a/0-00-proposal.tex
+++ b/0-00-proposal.tex
@@ -27,16 +27,12 @@ Many of these papers incorporate additional features such as optical flow~\cite{
 We have decided on combining two possible approaches, which address
 the third, temporal dimension in different ways: 3D Convolutional Neural
 Networks (3D-CNNs)~\cite{stf,cnnvid} and Multi-Dimensional Long
-Short-Term Memory (LSTM) Recurrent Neural Networks (RNNs)~\cite{ltrcn}. 
+Short-Term Memory (LSTM)/Recurrent Neural Networks (RNNs)~\cite{ltrcn}. 
 
 % 3D-CNNs
 Using a 3D-CNN, it is possible to build a classifier on a moving window
-of frames using 3D convolutions to extract useful local movement information. 3D-CNNs introduce a massive memory blowup that may make training infeasible on GPUs.
-To address this, we would like to use the slow fusion model~\cite{cnnvid}. On the other hand, an LSTM/RNN approach is
-able to build the classifier with long term memory
-using a much larger number of frames at once. 
-Combining a 3D-CNN with LSTM would combine the
-local movement information with long-term memory, with possible gains in learning.
+of frames using 3D convolutions to extract useful local movement information. However, 3D-CNNs introduce a massive memory blowup that may make training infeasible on GPUs.
+To address this, we would like to use the slow-fusion model~\cite{cnnvid} instead of 3D kernels. In addition, we also plan to apply 3D kernels to one or two layers to check the improvement if we don't meet the memory problem. On the other hand, an LSTM/RNN approach is able to build the classifier with long term memory using a much larger number of frames at once. Combining a slow-fusion CNN with LSTM would combine the local movement information with long-term memory, with possible gains in learning.
 % LSTM
 Furthermore, the current LSTM model is built on the fully-connected
 layer, which does not conserve spatial information. We would like to examine the 
@@ -48,7 +44,7 @@ this challenge, we would like to apply the multi-dimensional LSTM
 information following an early convolution layer. 
 
 \subsection*{Data Set}
-We propose to begin with a well-established data set such as UCF-101, which contains 13320 videos from 101 action categories. For early training purposes we may use only a small subset of these actions, such as a subset of 10 sports.
+We propose to begin with a well-established data set such as UCF-101~\cite{ucf101}, which contains 13320 videos from 101 action categories. For early training purposes we may use only a small subset of these actions, such as a subset of 10 sports. The ultimate goal is applying our framework to Sports-1M~\cite{cnnvid}, which contains around 1 million Youtube videos belonging to 487 categories. In this way, we can compare our methods with the current state-of-the-art methods.
 
 \subsection*{Experimental Methodology}
 %What specific experiments are you planning on conducting? How are they testing the specific problem you want to solve?
