--- a/bib.bib
+++ b/bib.bib
@@ -79,6 +79,21 @@
 	Volume = {abs/1411.4389},
 	Year = {2014},
 	Bdsk-Url-1 = {http://arxiv.org/abs/1411.4389}}
+	
+@article{ucf101,
+  author    = {Khurram Soomro and
+               Amir Roshan Zamir and
+               Mubarak Shah},
+  title     = {{UCF101:} {A} Dataset of 101 Human Actions Classes From Videos in
+               The Wild},
+  journal   = {CoRR},
+  volume    = {abs/1212.0402},
+  year      = {2012},
+  url       = {http://arxiv.org/abs/1212.0402},
+  timestamp = {Wed, 02 Jan 2013 09:49:04 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1212-0402},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
 @unpublished{dlbook,
 	Author = {Ian Goodfellow and Yoshua Bengio and Aaron Courville},
