--- a/tex-midterm/progress.tex
+++ b/tex-midterm/progress.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[10pt]{article}
 %\documentclass[leqno,onefignum,onetabnum]{siamltex1213}
 \newcommand{\ourtitle}{CS 8803DL: Deep Learning Project\\Mid-Term Progress Report}
 \newcommand{\ourinstitution}{Georgia Institute of Technology}
@@ -16,15 +16,15 @@
 \usepackage{vuduc-typography}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
-\usepackage{multirow}
-\usepackage{lscape}
+%\usepackage{multirow}
+%\usepackage{lscape}
 \usepackage{amsmath}
 \usepackage{amsfonts}
-\usepackage{morefloats}
-\usepackage{paralist}
+%\usepackage{morefloats}
+%\usepackage{paralist}
 \usepackage{sidenotes}
 \usepackage{tablefootnote}
-
+\usepackage[letterpaper, margin=1.2in]{geometry}
 \setcounter{page}{1}
 \pagenumbering{arabic}
 
@@ -43,22 +43,24 @@
 \newcommand{\Rfour}[4]{\ensuremath{\R^{{#1}\times{#2}\times{#3}\times{#4}}}\xspace} % 4-D: R^{a x b x c x d}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{\ourtitle}
+\title{\vspace{-1.4cm}\ourtitle}
 \author{Casey Battaglino\thanks{cbattaglino3@gatech.edu}}
 \author{Min-Hung Chen\thanks{cmhungsteve@gatech.edu}}
 \author{Chih-Yao Ma\thanks{cyma@gatech.edu}}
 \author{Hao Yan\thanks{yanhao@gatech.edu}}
-\affil{Georgia Institute of Technology}
+\affil{}
+%\affil{Georgia Institute of Technology}
+\date{}
 \begin{document}
 %\begin{abstract}
 %\end{abstract}
 \maketitle
 %\tableofcontents
 %=================================BODY==================================
-\section{Progress Report}                  \label{sec:progress}
-                                           \input{1-00-progress.tex}
+\section{Proposal}                  \label{sec:proposal}
+                                    \input{1-00-progress.tex}
 %=======================================================================
-\bibliographystyle{acm} \bibliography{bib}
+\bibliographystyle{abbrv} \bibliography{bib}
 %\input{appendix}
 \end{document}
 %eof
