--- a/tex/bib.bib
+++ b/tex/bib.bib
@@ -17,6 +17,49 @@
   url          = "http://lmb.informatik.uni-freiburg.de//Publications/2011/Bro11a"
 }
 
+@article{nin,
+  author    = {Min Lin and
+               Qiang Chen and
+               Shuicheng Yan},
+  title     = {Network In Network},
+  journal   = {CoRR},
+  volume    = {abs/1312.4400},
+  year      = {2013},
+  url       = {http://arxiv.org/abs/1312.4400},
+  timestamp = {Mon, 06 Jan 2014 15:10:41 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/LinCY13},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{cnnSC,
+  author    = {Ye Zhang and
+               Byron Wallace},
+  title     = {A Sensitivity Analysis of (and Practitioners' Guide to) Convolutional
+               Neural Networks for Sentence Classification},
+  journal   = {CoRR},
+  volume    = {abs/1510.03820},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1510.03820},
+  timestamp = {Sun, 01 Nov 2015 17:30:45 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/ZhangW15b},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{cnnMNLS,
+  author    = {Baotian Hu and
+               Zhengdong Lu and
+               Hang Li and
+               Qingcai Chen},
+  title     = {Convolutional Neural Network Architectures for Matching Natural Language
+               Sentences},
+  journal   = {CoRR},
+  volume    = {abs/1503.03244},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1503.03244},
+  timestamp = {Thu, 09 Apr 2015 11:33:20 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/HuLLC15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
 @inproceedings{byeon2015scene,
 	Author = {Byeon, Wonmin and Breuel, Thomas M and Raue, Federico and Liwicki, Marcus},
