update group tasking and experimental methodology

--- a/tex/1-00-progress.tex
+++ b/tex/1-00-progress.tex
@@ -61,6 +61,8 @@ The following is a set of experiments that we may perform, given enough time:
 \item Incorporate slow fusion within a 2D-CNN to see if this input approach yields higher accuracy.
 \item Replace a 2D-CNN-LSTM network with a Shallow ResNet-LSTM network (with or without slow fusion)-- to see if ResNet provides significant gains over the AlexNet used by existing studies.
 \item Study if slow-fusion \emph{combined} with optical-flow input provides significantly better results than either approach on its own.
+\item Using CNN + LSTM as base line compare with the performance from CNN + CNN.
+
 \end{itemize}
 We may experiment with different strategies in normalization and augmentation, given enough time.
 
@@ -93,9 +95,11 @@ The following is a tentative list of tasks. As we move closer to our experiments
 \begin{itemize}
 \item Proposal writing - Min-Hung Chen, Hao, Casey
 \item Proposal presentation - Chih-Yao Ma
+\item Mid-term project report writing- Chih-Yao Ma, Min-Hung Chen, Hao, Casey
+\item Mid-term project presentation- Chih-Yao Ma
 \item Read and understand papers on 2D-LSTM - Everyone
 %\item Read and understand caffe code that implements 2D-CNN and LSTM.
-\item Implement the temporal encoder with LSTM: Chih-Yao Ma, Casey
+\item Implement the temporal encoder with LSTM: Chih-Yao Ma
 \item Implement the spatial and temporal encoder with CNN: Min-Hung Chen, Hao
 \item Preparation of UCF data (incl. optical flow) - Casey
 \end{itemize}
