--- a/tex/bib.bib
+++ b/tex/bib.bib
@@ -6,6 +6,17 @@
 
 
 %% Saved with string encoding Unicode (UTF-8) 
+@INPROCEEDINGS{5539939, 
+author={D. Sun and S. Roth and M. J. Black}, 
+booktitle={Computer Vision and Pattern Recognition (CVPR), 2010 IEEE Conference on}, 
+title={Secrets of optical flow estimation and their principles}, 
+year={2010}, 
+pages={2432-2439}, 
+keywords={estimation theory;filtering theory;image sequences;Middlebury optical flow benchmark;image boundaries;intermediate flow fields;large spatial neighborhood;median filtering heuristic;objective function;optical flow estimation algorithm;optimization method;Art;Data flow computing;Filtering;Image motion analysis;Optical filters;Optimization methods;Performance gain;Robustness;Sun}, 
+doi={10.1109/CVPR.2010.5539939}, 
+ISSN={1063-6919}, 
+month={June},}
+
 @article{brox,
   author       = "T. Brox and J. Malik",
   title        = "Large displacement optical flow: descriptor matching in variational motion estimation",
