modify group task

--- a/tex/1-00-progress.tex
+++ b/tex/1-00-progress.tex
@@ -60,7 +60,7 @@ The following is a set of proposed experiments, some of which we have started:
 \item Incorporate slow fusion within a 2D-CNN to see if this input approach yields higher accuracy.
 \item Replace a 2D-CNN-LSTM network with a Shallow ResNet-LSTM network (with or without slow fusion)-- to see if ResNet provides significant gains over the AlexNet used by existing studies.
 \item Study if slow-fusion \emph{combined} with optical-flow input provides significantly better results than either approach on its own.
-\item Using CNN + LSTM as base line compare with the performance from CNN + CNN.
+\item Using CNN + LSTM as base line compare with the performance from CNN + 1D-CNN/2D-CNN.
 
 \end{itemize}
 We may experiment with different strategies in data normalization and augmentation, given enough time.
@@ -105,11 +105,13 @@ The following is a tentative list of tasks. As we move closer to completion the 
 %\item Read and understand caffe code that implements 2D-CNN and LSTM.
 \item Preparation of UCF data (incl. optical flow) - Casey \qquad \textbf{complete}
 \item Implement the temporal encoder with LSTM: Chih-Yao Ma \qquad \textbf{mostly complete}
-\item Prepare optical flow / augmentation for entire data set - Casey
-\item Implement the spatial and temporal encoder with CNN: Min-Hung Chen, Hao
-\item Perform experiments using the LSTM methodology - \dots
-\item Perform experiments using the CNN methodology - \dots
-\item Write final project report - Everyone
-\item Create final project presentation - \dots
+\item Prepare optical flow / augmentation for entire data set - Casey  \textbf{to be completed}
+\item Implement the spatial and temporal encoder with CNN: Min-Hung Chen, Hao \textbf{to be completed}
+\item Perform experiments using the LSTM methodology - Chih-Yao Ma, Casey \textbf{to be completed}
+\item Perform experiments using the CNN methodology - Min-Hung Chen, Hao \textbf{to be completed}
+\item Perform experiments using the LSTM methodology - Chih-Yao Ma, Casey \textbf{to be completed}
+	
+\item Write final project report - Everyone \textbf{to be completed}
+\item Create final project presentation - Everyone \textbf{to be completed}
 \end{itemize}
 
