--- a/tex/1-00-progress.tex
+++ b/tex/1-00-progress.tex
@@ -8,7 +8,7 @@ There are multiple recent approaches towards this goal, but as of yet no consens
 The difficulties in training neural networks on video input include the following: memory requirements (particularly if 3D convolutions are used), fewer public data sets, size of the data sets (for instance, the Sports-1M data set is $\approx 4TB$ large), and lack of consensus on which structural approaches are most effective. 
 
 Our goal is to develop a deep neural network that classifies videos.
-We have settled on two main approaches, discussed below: 3-dimensional convolutional neural networks (3D-CNNs) and recurrent neural networks that incorporate long short-term memory (LSTM).  
+We have settled on two main approaches for modeling the temporal information, discussed below: convolutional neural networks (3D-CNNs or CNN as temporal encoder) and recurrent neural networks that incorporate long short-term memory (LSTM).  
 
 \subsection*{Related Work}
 %What has been done in similar fields/problems? What are the limitations of current approaches?
@@ -24,9 +24,9 @@ Many of these papers incorporate additional features such as optical flow~\cite{
 %What is your proposed approach to solving the problem? How does it compare to existing approaches?
 %Note: It's OK for these projects to be similar to existing approaches, although if you want to publish the results they will have to have some novelty.
 We have decided on combining two possible approaches, which address
-the third, temporal dimension in different ways: 3D Convolutional Neural
-Networks (3D-CNNs)~\cite{stf,cnnvid} and Multi-Dimensional Long
-Short-Term Memory (LSTM)/Recurrent Neural Networks (RNNs)~\cite{ltrcn}. 
+the third, temporal dimension in different ways: Convolutional Neural
+Networks (3D-CNNs or CNN as temporal encoder)~\cite{stf,cnnvid,cnnMNLS} and Long
+Short-Term Memory /Recurrent Neural Networks (Regular or Multi-dimensional LSTM)~\cite{ltrcn}. 
 
 % 3D-CNNs
 Using a 3D-CNN, it is possible to build a classifier on a moving window
@@ -45,7 +45,7 @@ this challenge, we would like to apply the multi-dimensional LSTM
 information following an early convolution layer. 
 
 % CNN + CNN (1D convolution) ==> Yan
-Other than the LSTM model for the temporal encoder, convolutional architecture has also been applied to model sentences using a pre-trained embedding of words ~\cite{cnnSC,cnnMNLS}. We would like to implement this idea into the video classification. First, a pre-trained CNN architecture can be applied as spatial encoder to each frame to extract features. Furthermore, 1D or 2D CNN can be applied as the temporal encoder. For 1D CNN, we take 1D convolution on a sliding window of the concatenated feature vectors from the spatial decoder. For 2D CNN, we apply 2D convolution and 2D max-pooling directly on the a sliding window of the feature matrix from the spatial encoder. 
+Other than the LSTM model for the temporal encoder, convolutional architecture(CNN) has also been applied to model sentences using a pre-trained embedding of words ~\cite{cnnSC,cnnMNLS}. We would like to implement this idea into the video classification. First, a pre-trained CNN architecture can be applied as spatial encoder to each frame to extract features. Furthermore, 1D or 2D CNN can be applied as the temporal encoder. For 1D CNN, we take 1D convolution on a sliding window of the concatenated feature vectors from the spatial decoder. For 2D CNN, we apply 2D convolution and 2D max-pooling directly on the a sliding window of the feature matrix from the spatial encoder. 
 
 \subsection*{Data Set}
 We propose to begin with a well-established data set such as UCF-101~\cite{ucf101}, which contains 13320 videos from 101 action categories. For early training purposes we may use only a small subset of these actions, such as a subset of 10 sports. The ultimate goal is applying our framework to Sports-1M~\cite{cnnvid}, which contains around 1 million Youtube videos belonging to 487 categories. In this way, we can compare our methods with the current state-of-the-art methods.
